fix: resolve the classes not adding by js
Resolve dynamically generated classes by js and mjs not adding as
tailwind classes by adding components/*.mjs and main.js to content
of tailwind config.

Remember not to forget to add files that dependent on tailwind to
include in tailwind config file.

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 -->
     <section class="margin-section max-w-[1210px]">
       <h1
-        class="text-nowrap text-3xl text-center font-DM-serif-Display sm:text-3xlp md:text-5xl xl:text-6xl xsm:text-2xl text-black-dark"
+        class=" font-style text-nowrap  text-center font-DM-serif-Display  text-black-dark"
       >
         Articles & News
       </h1>
@@ -606,7 +606,7 @@
   ***************************
 -->
     <section
-      class="margin-section relative right-[88px]  flex h-[430px] w-screen flex-col items-center justify-center overflow-hidden bg-center bg-no-repeat pt-20"
+      class="margin-section relative xl:right-[88px]  flex h-[430px] w-screen flex-col items-center justify-center overflow-hidden bg-center bg-no-repeat pt-20 "
       style="background-image: url(assets/images/backgrounds/Rectangle\ 10.png)"
     >
       <div
