feat:create component for footer

--- a/index.html
+++ b/index.html
@@ -606,17 +606,17 @@
   ***************************
 -->
     <section
-      class="margin-section relative xl:right-[88px]  flex h-[430px] w-screen flex-col items-center justify-center overflow-hidden bg-center bg-no-repeat pt-20 "
+      class="margin-section relative xl:right-[88px]  flex h-[430px] w-screen flex-col items-center justify-center overflow-hidden bg-center bg-no-repeat sm:pt-20 "
       style="background-image: url(assets/images/backgrounds/Rectangle\ 10.png)"
     >
       <div
-        class="grid h-[250px] w-[569px] place-content-center rounded-br-3xl rounded-tl-3xl rounded-tr-3xl bg-black-default bg-opacity-70"
+        class="grid h-[250px] sm:w-[569px] place-content-center rounded-br-3xl rounded-tl-3xl rounded-tr-3xl bg-black-default bg-opacity-70 w-11/12 xsm:w-[300px] px-7 sm:px-0"
       >
-        <h1 class="font-DM-serif-Display text-5xl text-white">
+        <h1 class="font-DM-serif-Display sm:text-5xl text-white text-2xl">
           Wanna join the interno?
         </h1>
-        <p class="mt-3 text-xlp font-medium text-white">
-          It is a long established fact will be distracted
+        <p class="mt-3 sm:text-xlp font-medium text-white">
+         Join us and explore the artistry of interior design
         </p>
         <button class="button-orange mt-8">Contact With Us</button>
       </div>
@@ -627,57 +627,8 @@
   *          Footer       *
   ***************************
 -->
-    <footer class="m-14 flex gap-24">
-      <div>
-        <div class="flex items-center gap-1">
-          <img src="assets/images/logos/Vector.png" alt="logo" />
-          <h1 class="font-DM-serif-Display text-3xlp text-black-light">
-            SELHONO
-          </h1>
-        </div>
-        <p class="mt-5 font-Jost text-xlp text-black-light">
-          It is a long established fact that a reader will be distracted
-          lookings.
-        </p>
-
-        <div class="mt-10 flex gap-8">
-          <img src="assets/images/icons/facebook.png" alt="logo" />
-          <img src="assets/images/icons/twitter.png" alt="logo" />
-          <img src="assets/images/icons/linkedIn.png" alt="logo" />
-          <img src="assets/images/icons/instagram.png" alt="logo" />
-        </div>
-      </div>
-
-      <div class="text-nowrap">
-        <h1 class="font-DM-serif-Display text-2xl text-black-dark">Pages</h1>
-        <p class="text-xlp leading-[4rem] text-black-light">About Us</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Our Projects</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Our Team</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Contact Us</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Services</p>
-      </div>
-
-      <div class="text-nowrap">
-        <h1 class="font-DM-serif-Display text-2xl text-black-dark">Services</h1>
-        <p class="text-xlp leading-[4rem] text-black-light">Kitchan</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Living Area</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Bathroom</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Dinning Hall</p>
-        <p class="text-xlp leading-[4rem] text-black-light">Bedroom</p>
-      </div>
-
-      <div>
-        <h1 class="font-DM-serif-Display text-2xl text-black-dark">Contact</h1>
-        <p
-          class="mt-[1rem] whitespace-normal text-xlp leading-8 text-black-light"
-        >
-          55 East Birchwood Ave. Brooklyn, New York 11201
-        </p>
-        <p class="text-xlp leading-[4rem] text-black-light">
-          contact@selhono.com
-        </p>
-        <p class="text-xlp leading-[4rem] text-black-light">(123) 456 - 7890</p>
-      </div>
+    <footer>
+      <!-- refer to components\footer.mjs -->
     </footer>
     <script type="module" src="main.js"></script>
   </body>
