fix:resovle script not loading by changing components files

--- a/index.html
+++ b/index.html
@@ -588,6 +588,8 @@
     <footer>
       <!-- refer to components\footer.mjs -->
     </footer>
+       <script src="/components/sliderSupport.mjs"></script>
+      <script type="module" src="/components/articleSection.mjs"></script>
     <script type="module" src="main.js"></script>
   </body>
 </html>
