--- a/index.html
+++ b/index.html
@@ -6,17 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Vite App</title>
+    <script src="/components/sliderSupport.mjs"></script>
+      <script type="module" src="/components/articleSection.mjs"></script>
+       <script src="/components/page Transitions/indexPage.js" type="module"></script>
   </head>
   <body
     class="w-screen overflow-x-hidden md:mr-4 lg:ml-6 xl:mx-auto xl:max-w-[1210px]"
   >
-    <header></header>
+
+   <ul class="transition">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
+    <!--
+  ***************************
+  *        HEADER           *
+  ***************************
+-->
+    <header class="xl:w-[1210px] mx-auto">
+  <div class="mt-5 flex h-[50px] justify-between sm:mt-4 xsm:mt-2">
+    <div class="ml-3 flex items-center gap-1">
+      <img src="../assets/images/logos/Vector.png" alt="logo" class="sm:size-8 md:size-10 xl:size-12" />
+      <h1 class="xsm:font-DM-serif-Display text-3xlp text-black-light sm:mt-2 sm:text-2xlp xsm:mt-2 xsm:text-2xl">
+        SELHONO
+      </h1>
+    </div>
+    <nav class="flex items-center gap-3 xl:gap-12">
+      <ul class="hidden xl:mr-5 xl:flex xl:gap-12">
+        <li class="font-Jost text-xl font-medium">
+          <a href="/index.html" class="link">Home</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/service.html" class="link">Services</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/projects.html" class="link">Projects</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/about.html" class="link">About</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/contact.html" class="link">Contact</a>
+        </li>
+      </ul>
+      <div>
+        <img src="../assets/images/icons/search.png" alt="search" class="md:mr-4" />
+      </div>
+      <img src="../assets/images/icons/menu.svg" alt="menu" class="mr-5 block size-6 md:mr-24 xl:hidden" />
+    </nav>
+  </div>
+</header>
 
     <!--
   ***************************
   *        Hero Section     *
   ***************************
 -->
+  <main  >
     <section
       class="relative mt-4 h-[600px] bg-hero-image bg-top bg-no-repeat sm:mt-8 sm:h-[580px] md:mt-24 md:h-[758px] md:bg-top lg:mx-auto lg:bg-left-top xl:mx-auto xl:mt-40"
     >
@@ -581,6 +631,7 @@
     </section>
     
 
+  </main>
     <!--
   ***************************
   *          Footer       *
@@ -589,8 +640,8 @@
     <footer>
       <!-- refer to components\footer.mjs -->
     </footer>
-       <script src="/components/sliderSupport.mjs"></script>
-      <script type="module" src="/components/articleSection.mjs"></script>
+   
     <script type="module" src="main.js"></script>
+       
   </body>
 </html>
