--- a/test.html
+++ b/test.html
@@ -1,48 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class  = "md:h-[521px] max-w-[382px] w-11/12 rounded-[62px] border border-black-default p-5 xsm:w-[300px] mx-auto ">
-                            <div
-            class="h-72 xl:w-96 bg-no-repeat rounded-tr-[44px] sm:rounded-none md:rounded-tr-[44px] "
-            style="
-              background-image: url('assets/images/backgrounds/ArticleBg1 .png');
-            "
-          >
-            <div
-              class="relative left-5 top-56 grid h-12 w-32 place-content-center rounded-br-2xl rounded-tl-2xl rounded-tr-2xl bg-black-default opacity-50"
-            >
-              <h1 class="font-Jost text-white">${title[i]}</h1>
-            </div>
-          </div>
-          <h1
-            class="mt-2 text-wrap font-DM-serif-Display text-2xl text-black-dark"
-          >
-            ${description[i]}
-          </h1>
-          <div class="mt-3 flex items-center">
-            <div>
-              <p class="font-Jost sm:text-xlp text-black-light text-lg">
-               ${date[i]}
-              </p>
-            </div>
-            <div
-              class="ml-auto grid size-[70px] place-content-center rounded-full"
-            >
-              <img
-                src="assets/images/icons/arrowArticle.png"
-                alt="ArrowRight" class="size-12 sm:size-16"
-              />
-            </div>
-          </div>
-          </div>
-      <script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Testing Here Warning!</title>
+
+  <style>
     
-      </script>
+  </style>
+  
+</head>
+<body data-barba="wrapper">
+  
+  <ul class="transition">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
+  <div class="wrapper">
+   <header class="xl:w-[1210px] mx-auto">
+  <div class="mt-5 flex h-[50px] justify-between sm:mt-4 xsm:mt-2">
+    <div class="ml-3 flex items-center gap-1">
+      <img src="../assets/images/logos/Vector.png" alt="logo" class="sm:size-8 md:size-10 xl:size-12" />
+      <h1 class="xsm:font-DM-serif-Display text-3xlp text-black-light sm:mt-2 sm:text-2xlp xsm:mt-2 xsm:text-2xl">
+        SELHONO
+      </h1>
+    </div>
+    <nav class="flex items-center gap-3 xl:gap-12">
+      <ul class="hidden xl:mr-5 xl:flex xl:gap-12">
+        <li class="font-Jost text-xl font-medium">
+          <a href="/index.html" class="link">Home</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/service.html" class="link">Services</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/projects.html" class="link">Projects</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/about.html" class="link">About</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/contact.html" class="link">Contact</a>
+        </li>
+      </ul>
+      <div>
+        <img src="../assets/images/icons/search.png" alt="search" class="md:mr-4" />
+      </div>
+      <img src="../assets/images/icons/menu.svg" alt="menu" class="mr-5 block size-6 md:mr-24 xl:hidden" />
+    </nav>
+  </div>
+</header>
+
+
+    <main data-barba="container" data-barba-namespace="home" >
+      <h1 style="width: 300px;">Loorem ipsum dolor sit amet consectetur adipisicing elit. Harum quo quibusdam quia.</h1>
+      <p style="margin-top: 100px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptates, deserunt, iste laudantium iusto ab eius ducimus vitae possimus nam veritatis? Necessitatibus beatae eligendi unde repudiandae repellat. Molestiae quos eius laboriosam dolor.</p>
+
+    </main>
+    <a href="" ></a>
+  </div>
+
+  <script src="https://unpkg.com/@barba/core"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    function pageTransition() {
+      let tl = gsap.timeline();
+      tl.to('ul.transition li', {
+        scaleY:1,
+        transformOrigin:"bottom left",
+        duration: 0.5,
+        ease: 'power2.out',
+        stagger:.2,
+      })
+
+      tl.to('ul.transition li', {
+        scaleY:0,
+        transformOrigin:"bottom left",
+        duration: 0.5,
+        ease: 'power2.out',
+        stagger:.1,
+        delay:.1,
+      })
+    }
+    function delay(n) {
+      return new Promise(
+        done => {
+          setTimeout( () => {
+            done(); 
+          },n )
+        });
+    }
+   
+    // Start Barba.js PJAX engine
+    Barba.Pjax.start();
+  </script>
 </body>
 </html>
