feat:add page transition to all pages
Add page transition to all pages .
Modify style.css class .transition to change color to white

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
        <script src="/components/page Transitions/indexPage.js" type="module"></script>
   </head>
   <body
+  data-barba="wrapper"
     class="w-screen overflow-x-hidden md:mr-4 lg:ml-6 xl:mx-auto xl:max-w-[1210px]"
   >
 
@@ -66,7 +67,7 @@
   *        Hero Section     *
   ***************************
 -->
-  <main  >
+  <main data-barba="container" >
     <section
       class="relative mt-4 h-[600px] bg-hero-image bg-top bg-no-repeat sm:mt-8 sm:h-[580px] md:mt-24 md:h-[758px] md:bg-top lg:mx-auto lg:bg-left-top xl:mx-auto xl:mt-40"
     >
