fix:fix layout of index page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   </head>
   <body
   data-barba="wrapper"
-    class="w-screen overflow-x-hidden md:mr-4 lg:ml-6 xl:mx-auto xl:max-w-[1210px]"
   >
 
    <ul class="transition">
@@ -62,14 +61,14 @@
   </div>
 </header>
 
+<main data-barba="container" >
     <!--
   ***************************
   *        Hero Section     *
   ***************************
 -->
-  <main data-barba="container" >
     <section
-      class="relative mt-4 h-[600px] bg-hero-image bg-top bg-no-repeat sm:mt-8 sm:h-[580px] md:mt-24 md:h-[758px] md:bg-top lg:mx-auto lg:bg-left-top xl:mx-auto xl:mt-40"
+      class="relative mt-4 h-[600px] bg-hero-image bg-top bg-no-repeat sm:mt-8 sm:h-[580px] md:mt-24 md:h-[758px] md:bg-top lg:mx-auto lg:bg-left-top  xl:mt-40 w-screen  lg:w-[1210px]"
     >
       <!-- Overlay -->
       <div
@@ -181,7 +180,7 @@
   *       Contact Us        *
   ***************************
 -->
-    <section class=" margin-section flex  xl:flex-row">
+    <section class=" margin-section flex  xl:flex-row w-screen mx-auto  lg:w-[1210px]  ">
       <!-- Left image -->
       <div
         class="relative z-30 h-[590px] w-screen bg-workFrame1 bg-left-bottom bg-no-repeat sm:w-[550px] sm:bg-contain sm:bg-left-top md:w-[653px] md:bg-auto xl:h-[700px]"
@@ -225,14 +224,14 @@
 
       <!-- right image -->
       <div
-        class="absolute z-20 hidden h-[590px] sm:left-[280px] sm:block sm:w-[800px] md:left-[380px] xl:left-[440px] xl:h-[700px] xl:w-[877px]"
+        class="absolute z-20 hidden h-[590px] sm:left-[280px] sm:block sm:w-[800px] md:left-[380px] lg:left-[440px] xl:h-[700px] xl:w-[877px]"
         style="background-image: url(assets/images/backgrounds/Subtract.png)"
       >
         <div
-          class="absolute right-0 h-full w-[790px] bg-black-default bg-opacity-40 xl:left-0 xl:w-[800px]"
+          class="absolute right-0 h-full w-[790px] bg-black-default bg-opacity-40 lg:left-0 lg:w-[800px]"
         >
           <div
-            class="absolute -left-8 -top-4 z-10 h-[610px] w-[350px] rounded-tr-full bg-white xl:-left-0 xl:-top-4 xl:h-[720px]"
+            class="absolute -left-8 -top-4 z-10 h-[610px] w-[350px] rounded-tr-full bg-white lg:-left-0 lg:-top-4 lg:h-[720px]"
           ></div>
         </div>
       </div>
