style:create arrow right icon in button in index page
Utilize FontAwesome to create arrow-right icon in button in index page

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           class="button-orange mx-auto mt-16 sm:mt-16 md:ml-0 md:mt-20 lg:mt-16 xl:mt-8 xsm:mt-6"
         >
           Get Started
+          <i class="fa-solid fa-arrow-right ml-3"></i>
         </button>
       </div>
     </section>
@@ -218,7 +219,7 @@
           </div>
 
           <!-- button -->
-          <button class="button-orange mt-12">Get Free Estimate</button>
+          <button class="button-orange mt-12">Get Free Estimate <i class="fa-solid fa-arrow-right ml-3"></i></button>
         </div>
       </div>
 
@@ -626,7 +627,7 @@
         <p class="mt-3 sm:text-xlp font-medium text-white">
          Join us and explore the artistry of interior design
         </p>
-        <button class="button-orange mt-8">Contact With Us</button>
+        <button class="button-orange mt-8">Contact With Us <i class="fa-solid fa-arrow-right ml-3"></i></button>
       </div>
     </section>
     
