fix:add script to run slider

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
     <footer>
       <!-- refer to components\footer.mjs -->
     </footer>
-   
+   <script type="module" src="/components/sliderSupport.mjs"></script>
     <script type="module" src="main.js"></script>
        
   </body>
