refactor : remove unnecessary javascript files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite App</title>
     <script src="/components/sliderSupport.mjs"></script>
       <script type="module" src="/components/articleSection.mjs"></script>
-       <script src="/components/page Transitions/indexPage.js" type="module"></script>
+     
   </head>
   <body
   data-barba="wrapper"
@@ -641,8 +641,9 @@
     <footer>
       <!-- refer to components\footer.mjs -->
     </footer>
-   <script type="module" src="/components/sliderSupport.mjs"></script>
-    <script type="module" src="main.js"></script>
+   <script type="module" src="/components/sliderSupport.mjs" defer></script>
+    <script type="module" src="main.js" defer></script>
+    <script type="module" src="/components/pageTransition.js" defer></script>
        
   </body>
 </html>
